Simple walk game

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
     <script src="bower_components/babel-polyfill/browser-polyfill.js"></script>
     <script src="bower_components/bluebird/js/browser/bluebird.js"></script>
 
+    <style>
+        body{
+            /* set margin to 0 and overflow to hidden,
+            to use the complete page */
+            margin: 0;
+            overflow: hidden;
+        }
+    </style>
+
 </head>
 <body>
 <div id="gl-out"></div>
